# cloudiip-alglib-foton-python-github

./: .gitignore  Dockerfile  MLproject  README.md  cookiecutter.json  kubernetes_config.json  kubernetes_job_template.yaml  train.py
.github/workflows/: deploy.yml
mlplatform-infra/: Pulumi.dev.yaml  TraefikRoute.ts  index.ts  package-lock.json  package.json
model-app/: .env  Dockerfile  app.py  requirements.txt
model-app/config/: envconfig.py
model-app/crud/: crud_param.py
model-app/db/: database.py  iotdb.py
model-app/exceptions/: param_exceptions.py
model-app/models/: corr_fan_param.py
model-app/schemas/: corr_fan_param.py
model-template/my_model/: Dockerfile  Makefile  pyproject.toml
model-template/my_model/.github/workflows/: deploy.yml
model-template/my_model/infra/: package-lock.json  package.json
model-template/my_model/src/my_model/serving/: __main__.py
model-template/my_model/src/my_model/training/: train.py
model-template/{{cookiecutter.project_slug}}/: Makefile
model-template/{{cookiecutter.project_slug}}/infra/: index.ts
tests/: set1_timefeatures.csv  test_Similarity-based RUL Prediction.ipynb  test_corr_heapmap.ipynb  test_dropdown_plotly.ipynb  test_iotdb.ipynb  test_load_images.ipynb  test_log_figure.ipynb  test_log_html.ipynb
tests/localstack/: lambda.py  main_utils.py  test_lambda.py  test_s3.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_name}}/data/.dvc/: config
{{cookiecutter.project_slug}}/{{cookiecutter.project_name}}/infra/: Pulumi.dev.yaml
